third_party/rust/chromium_crates_io/vendor/derive_more-v2/tests/compile_fail/add/union.rs
#[derive(derive_more::Add)]
union IntOrFloat {
    i: u32,
}

fn main() {}
